#
# Copyright 2024 William Swartzendruber
#
# To the extent possible under law, the person who associated CC0 with this file has waived all
# copyright and related or neighboring rights to this file.
#
# You should have received a copy of the CC0 legalcode along with this work. If not, see
# <http://creativecommons.org/publicdomain/zero/1.0/>.
#
# SPDX-License-Identifier: CC0-1.0
#

[workspace]
resolver = "2"

members = [
    "hlg2pq",
    "pq2hlg",
    "pqstat",
    "mono709",
    "dsp",
]
