#
# Copyright 2021 William Swartzendruber
#
# Any copyright is dedicated to the Public Domain.
#
# SPDX-License-Identifier: CC0-1.0
#

[package]
name = "dsp"
description = "DSP routines for hlg-tools"
version = "1.0.1"
authors = ["William Swartzendruber <wswartzendruber@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/wswartzendruber/hlg-tools"

[dev-dependencies]
assert_approx_eq = "1.1.0"
more-asserts = "0.2"
