#
# SPDX-FileCopyrightText: 2021 William Swartzendruber <wswartzendruber@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0
#

[package]
name = "lcalc"
description = "Determines the necessary luminosity scaling for pq2hlg"
version = "0.4.0"
authors = ["William Swartzendruber <wswartzendruber@gmail.com>"]
edition = "2018"
license = "OSL-3.0"
repository = "https://github.com/wswartzendruber/hlg-tools"

[dependencies]
dsp = { path = "../dsp" }
clap = "~2.27.0"
