#
# Any copyright is dedicated to the Public Domain.
# https://creativecommons.org/publicdomain/zero/1.0/
#

[package]
name = "pq2hlg"
description = "Generates a Cube LUT for Converting from PQ to HLG"
version = "0.1.0"
authors = ["William Swartzendruber <wswartzendruber@gmail.com>"]
edition = "2018"
license = "OSL-3.0"
repository = "https://github.com/wswartzendruber/hlg-tools"

[dependencies]
dsp = { path = "../dsp" }
clap = "~2.27.0"
