#
# Any copyright is dedicated to the Public Domain.
#
# Copyright 2022 William Swartzendruber
#
# SPDX-License-Identifier: CC0-1.0
#

[package]
name = "pq2hlg"
description = "Generates a Cube LUT for Converting from PQ to HLG"
version = "0.5.0"
authors = ["William Swartzendruber <wswartzendruber@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/wswartzendruber/hlg-tools"

[dependencies]
dsp = { path = "../dsp" }
clap = "~2.27.0"
