#
# Any copyright is dedicated to the Public Domain.
#
# Copyright 2021 William Swartzendruber
#
# SPDX-License-Identifier: CC0-1.0
#

[package]
name = "pqstat"
description = "Determines a PQ stream's brightness characteristics for HLG conversion"
version = "0.4.2"
authors = ["William Swartzendruber <wswartzendruber@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/wswartzendruber/hlg-tools"

[dependencies]
dsp = { path = "../dsp" }
byteorder = "1"
clap = "~2.27.0"
