#
# Copyright 2023 William Swartzendruber
#
# To the extent possible under law, the person who associated CC0 with this file has waived all
# copyright and related or neighboring rights to this file.
#
# You should have received a copy of the CC0 legalcode along with this work. If not, see
# <http://creativecommons.org/publicdomain/zero/1.0/>.
#
# SPDX-License-Identifier: CC0-1.0
#

[package]
name = "pqstat"
description = "Determines a PQ stream's brightness characteristics for HLG conversion"
version = "2.0.0-beta1"
authors = ["William Swartzendruber <wswartzendruber@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/wswartzendruber/hlg-tools"

[dependencies]
dsp = { path = "../dsp" }
byteorder = "1"
clap = "~2.27.0"
